# packages/server/src/index.ts
@@ -1,3 +1,4 @@
+import { uuid } from "@app/core/random";
 import * as jsonServer from "json-server";
 import { db } from "./db";
 
@@ -7,6 +8,24 @@ const middlewares = jsonServer.defaults();
 const port = 3000;
 
 server.use(middlewares);
+server.use(jsonServer.bodyParser);
+
+server.use((req, res, next) => {
+  const requestTime = new Date().toISOString();
+
+  if (req.method === "POST") {
+    req.body.id = uuid();
+    req.body.createdAt = requestTime;
+    req.body.updatedAt = requestTime;
+  }
+
+  if (req.method === "PATCH") {
+    req.body.updatedAt = requestTime;
+  }
+
+  next();
+});
+
 server.use(router);
 server.listen(port, () => {
   console.log(`🚀 JSON Server is running on http://localhost:${port}`);
